# FireFly

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.md  Firefly.kdev4  LICENSE  README.md  example.cpp  example_mpi.cpp  ff_insert.cpp  firefly.cpp  insert_ibps.cpp  meson.build  meson_options.txt  s_y_1_v_test.m  s_y_test.m
benchmarks/: benchmarks.cpp  benchmarks_no_bt.cpp  f1.m  f2.m  f3.m  f4.m  factors1.m  factors2.m  factors3.m  factors4.m  factors5.m
cmake/: FindFLINT.cmake  FindGMP.cmake  LibFindMacros.cmake  pc.in
doc/: CMakeLists.txt  Doxyfile.in
examples/: README
examples/config/: functions  skip_functions
examples/expression/: in.m  out.m
examples/ff_insert/config/: vars
examples/ff_insert/expression/: in.m  out.m
examples/firefly_executable/: anchor_points  shifts
examples/replacements/: rep1.m  rep2.m
mma_2_ff/: convert_to_ff.m  convert_to_ff.sh  convert_to_sy.sh
parser_test/: s_y_1_v.m  s_y_1_v_test.m  s_y_2.m  s_y_4_v.m  s_y_safe.m  s_y_test.m
source/: #PolynomialFF.cpp#  AmplitudeParser.cpp  BaseReconst.cpp  DenseSolver.cpp  FFInt.cpp  FFIntVec.cpp  FFThieleInterpolator.cpp  HornerGenerator.cpp  MPIWorker.cpp  Monomial.cpp  MultiPolynomialFF.cpp  ParserUtils.cpp  Poly.cpp  PolyReconst'.cpp  PolyReconst.cpp  Polynomial.cpp  PolynomialFF.cpp  RatReconst.cpp  RatReconstCC.cpp  RationalFunction.cpp  RationalFunctionFF.cpp  RationalNumber.cpp  ReconstHelper.cpp  Reconstructor.cpp  ShuntingYardParser.cpp  Tests.cpp  example.cpp  gzstream.cpp  meson.build  utils.cpp
source/include/: AmplitudeParser.hpp  BaseReconst.hpp  BlackBoxBase.hpp  DenseSolver.hpp  FFInt.hpp  FFIntVec.hpp  FFThieleInterpolator.hpp  HornerGenerator.hpp  Logger.hpp  MPIWorker.hpp  Monomial.hpp  MultiPolynomialFF.hpp  ParserUtils.hpp  Poly.hpp  PolyReconst.hpp  Polynomial.hpp  PolynomialFF.hpp  RatReconst.hpp  RationalFunction.hpp  RationalFunctionFF.hpp  RationalNumber.hpp  ReconstHelper.hpp  Reconstructor.hpp  ShuntingYardParser.hpp  Tests.hpp  ThreadPool.hpp  UintHasher.hpp  gzstream.h  gzstream.hpp  utils.hpp  version.hpp.in
source/include/firefly/: AmplitudeParser.hpp  BaseReconst.hpp  DenseSolver.hpp  FFInt.hpp  FFIntVec.hpp  FFThieleInterpolator.hpp  HornerGenerator.hpp  Logger.hpp  MPIWorker.hpp  Monomial.hpp  ParserUtils.hpp  Poly.hpp  PolyReconst.hpp  Polynomial.hpp  PolynomialFF.hpp  RatReconst.hpp  RationalFunction.hpp  RationalFunctionFF.hpp  RationalNumber.hpp  ReconstHelper.hpp  Reconstructor.hpp  ShuntingYardParser.hpp  Tests.hpp  ThreadPool.hpp  UintHasher.hpp  config.hpp  config.hpp.in  gzstream.hpp  meson.build  tinydir.h  utils.hpp  version.hpp  version.hpp.in
subprojects/: flint2.wrap
test/: CMakeLists.txt  UnitTest.cpp  meson.build  test_bunch.cpp  test_normal.cpp  test_safe.cpp  test_save.cpp  test_save_read.cpp  test_save_write.cpp
