
option('flint', type: 'boolean', value: false, yield : true,
       description: 'Build FireFly with FLINT.')

option('mpi', type: 'boolean', value: false, yield : true,
       description: 'Build FireFly with MPI.')

option('jemalloc', type: 'boolean', value: false, yield : true,
       description: 'Link executables with jemalloc.')

# Custom modular arithmetic is not (yet) supported.
