include_directories(${INCLUDE_PATH}/test)
add_definitions(-DDOCTEST_CONFIG_IMPLEMENT_WITH_MAIN)

set(LIBS FireFly_static gmp ${ZLIB_LIBRARIES})
if("${WITH_FLINT}" STREQUAL true)
  set(LIBS ${LIBS} flint)
endif()
if("${WITH_MPI}" STREQUAL true)
  set(LIBS ${LIBS} ${MPI_CXX_LIBRARIES})
endif()

function(add_firefly_test name)
  if("${CUSTOM}" STREQUAL "true")
  message("-- ${Red}Using custom modular arithmetic. The unit test is thus not compiled.${ColourReset}")
  else()
    if("${name}" STREQUAL "test_normal" OR "${name}" STREQUAL "test_save_read" OR "${name}" STREQUAL "test_save_write")
      add_executable(${name} EXCLUDE_FROM_ALL ${name}.cpp)
    else()
      add_executable(${name} EXCLUDE_FROM_ALL ${name}.cpp)
    endif()
    target_link_libraries(${name} ${LIBS})
  endif()
  add_test(NAME ${name} COMMAND ${name})
  add_dependencies(check ${name})
endfunction()

add_firefly_test(test_bunch)
add_firefly_test(test_normal)
add_firefly_test(test_safe)
add_firefly_test(test_save_write)
add_firefly_test(test_save_read)
